--- a/Tarea1/Informe/tex/main.tex
+++ b/Tarea1/Informe/tex/main.tex
@@ -79,6 +79,9 @@ $$
 La función $pdf(x)$ es, en este caso, la distribución $\displaystyle \chi^2(x) = \frac{1}{2^{k/2}\Gamma(k/2)}x^{k/2-1}e^{-x/2}$, 
 donde $\displaystyle  \Gamma(z) = \int_0^\infty x^{z-1}e^{-x}dx$.
 
-La implementación de la función $\Gamma(z)$ en el código posee el problema del límite de integración superior infinito. Para solucionarlo, se debe realizar un cambio de variables apropiado.
+La implementación de la función $\Gamma(z)$ en el código posee el problema del límite de integración superior infinito. Para solucionarlo, se debe realizar un cambio de variables apropiado. Tomando $u = e^{-x}$ ($du = -e^{-x}dx$) la integral queda:
+$$
+	\int_0^\infty x^{z-1}e^{-x}dx = \int_0^1 (-\ln(u))^{z-1} du
+$$
 % FIN DEL DOCUMENTO
 \end{document}
