--- a/Informe/tex/informe.tex
+++ b/Informe/tex/informe.tex
@@ -72,20 +72,44 @@
 \templateFinalcfg
 
 % ======================= INICIO DEL DOCUMENTO =======================
+\section{Introducción}
 El problema a resolver es encontrar numéricamente el valor de $a$ para la siguiente ecuación:
 $$
-0.95 = \P(x<a) =\int_{-\infty}^a pdf(x) dx 
+0.95 = \P(x<a) =\int_{0}^a \chi^2(x) dx 
 $$
-La función $pdf(x)$ es, en este caso, la distribución $\displaystyle \chi^2(x) = \frac{1}{2^{k/2}\Gamma(k/2)}x^{k/2-1}e^{-x/2}$, 
-donde $\displaystyle  \Gamma(z) = \int_0^\infty x^{z-1}e^{-x}dx$.
+Donde la distribución $\displaystyle \chi^2(x) = \frac{1}{2^{k/2}\Gamma(k/2)}x^{k/2-1}e^{-x/2}$, 
+y $\displaystyle  \Gamma(z) = \int_0^\infty x^{z-1}e^{-x}dx$.
+\newp
+Se comenzará con la implementación de la función $\Gamma(z)$. Para su implementación en código se regularizará la integral por medio de un cambio de variable apropiado. La integración se hará usando el método de Simpson, teniendo como parámetro la convergencia relativa deseada. Debido a la singularidad, la integración irá acompañada por el método del punto medio para obtener una aproximación de la integral en valores cercanos a $x=0$.
 
-La implementación de la función $\Gamma(z)$ en el código posee el problema del límite de integración superior infinito. Para solucionarlo, se debe realizar un cambio de variables apropiado. Tomando $u = e^{-x}$ ($du = -e^{-x}dx$) la integral queda:
-$$
-	\int_0^\infty x^{z-1}e^{-x}dx = \int_1^0 -(-\ln(u))^{z-1} du = \int_0^1 \left(\ln(\frac{1}{u})\right)^{z-1}du
-$$
-La integración numérica de $\Gamma(z)$ requirió del uso del método del punto medio para el caso de la singularidad en $z = 0$, mientras que desde un $\Delta x = 1\cross10^{-6}$ hasta $z=1$ se usó Simpson 1/3.
+Luego, usando el mismo método de Simpson se calcularán valores de $\P(x < a)$ para $5<a<15$, que irán acercándose a $\P(x<a)=0.95$ con la tolerancia absoluta que se requiera gracias al método de la bisección.
 
-Se determinó el valor a usar de la tolerancia relativa gracias a la figura \ref{err}. Se aprecia una línea casi recta para un espacio logarítmico (log-log). El promedio se calculó tomando la media aritmética del valor absoluto de la diferencia entre el valor real de $\Gamma(z)$ y la aproximación numérica para $z \in \{1, 2, 3, 4\}$.
+\section{Desarrollo}
+
+Tomando $u = e^{-x}$ la integral queda:
+$$	
+	\Gamma(z)
+	=
+	\int_0^\infty x^{z-1}e^{-x}dx 
+	=
+	\int_0^1 \left(\ln(\frac{1}{u})\right)^{z-1}du
+$$
+La integración numérica de $\Gamma(z)$ requirió del uso del método del punto medio para el caso de la singularidad en $z = 0$, donde se calculó la integral entre 0 y un $\Delta x = 1\cross10^{-6}$ como $I_0 = f(\frac{\Delta x}{2})\Delta x$. 
+
+Desde $z=\Delta x$ hasta $z=1$ se usó Simpson vía método de los trapecios. 
+Se calculó $S_{2N}=\frac{1}{3}(4T_{2N}-T_N)$, donde $S_{2N}$ es la integral usando Simpson, mientras que $T_N$, $T_{2N}$ son las integrales usando trapecios. 
+
+Las integrales $T_N$ se calculan como $\displaystyle T_N=\left(\frac{f(x_0)+f(x_N)}{2}+\sum_{i=1}^{N-1} f(x_i)\right)\Delta x$.
+
+Se ha definido un parámetro llamado tol\_rel que permite determinar el cumplimiento de la siguiente desigualdad:
+
+\insertequation{\left|\frac{S_{2N}-T_N}{T_N}\right|> tol\_rel} 
+
+En caso contrario, no será necesario volver a llamar recursivamente la función considerando el doble de puntos.
+Se determinó el valor a usar de la tolerancia relativa gracias a la figura \ref{err}. Se usaron valores conocidos de $\Gamma(z)$ (si $n \in \N$, $\Gamma(z)=(z-1)!$) 
+
+
+Se aprecia una línea casi recta para un espacio logarítmico (log-log). El promedio se calculó tomando la media aritmética del valor absoluto de la diferencia entre el valor real de $\Gamma(z)$ y la aproximación numérica para $z \in \{1, 2, 3, 4\}$.
 
 \insertimage{tol_rel_3_Gamma.png}{width = 10cm}{Error absoluto promedio en función de la tolerancia relativa otorgada como parámetro al método de Simpson. \label{err}}
 
@@ -96,5 +120,8 @@ Finalmente para encontrar el valor de $a$ se ha usado el método de la bisecció
 \insertimage{tol_abs.png}{width=10cm}{Error absoluto para distintas tolerancias absolutas. \label{abs}}
 Visualmente, la resolución del problema consistía en encontrar el $a$ que hiciera el área azul bajo la curva $y = \chi^2(x)$ igual a 0.95, cuestión ilustrada en la figura \ref{area} 
 \insertimage{area_bajo_chi2_para_a.png}{width=10cm}{Área bajo la curva $y = \chi^2(x)$ desde $x = 0$ hasta el valor encontrado $x=a$. \label{area}}
+\section{Resultados}
+
+\section{Discusión y Conclusiones}
 % FIN DEL DOCUMENTO
 \end{document}
