Agrega resultados, discusiones y conclusión al informe

--- a/Informe/tex/informe.tex
+++ b/Informe/tex/informe.tex
@@ -86,7 +86,7 @@ y $\displaystyle  \Gamma(z) = \int_0^\infty x^{z-1}e^{-x}dx$.
 \newp
 Se comenzará con la implementación de la función $\Gamma(z)$. Para su implementación en código se regularizará la integral por medio de un cambio de variable apropiado. La integración se hará usando el método de Simpson, teniendo como parámetro la convergencia relativa deseada. Debido a la singularidad, la integración irá acompañada por el método del punto medio para obtener una aproximación de la integral en valores cercanos a $x=0$.
 
-Luego, usando el mismo método de Simpson se calcularán valores de $\P(x < a)$ para $0.1<a<20$, que irán acercándose a $\P(x<a)=0.95$ con la tolerancia absoluta que se requiera gracias al método de Newton, otorgándole un valor inicial dado por el método de la bisección.
+Luego, usando el mismo método de Simpson se calcularán valores de $\P(x < a)$ para $0<a<20$, que irán acercándose a $\P(x<a)=0.95$ con la tolerancia absoluta que se requiera gracias al método de Newton, otorgándole un valor inicial dado por el método de la bisección.
 
 \section{Desarrollo}
 El integrando original describe un área que se puede apreciar en la figura \ref{original}
@@ -99,45 +99,77 @@ $$
 	\int_0^1 \left(\ln(\frac{1}{u})\right)^{z-1}du
 $$
 
-La integración numérica de $\Gamma(z)$ requirió del uso del método del punto medio para el caso de la singularidad en $z = 0$ que se puede apreciar en la figura \ref{modificado}, donde se calculó la integral entre 0 y un $\Delta x > 0$ (que se presentará más adelante) como $I_0 = f(\frac{\Delta x}{2})\Delta x$. 
+La integración numérica de $\Gamma(z)$ requirió del uso del método del punto medio para el caso de la singularidad en $z = 0$ que se puede apreciar en la figura \ref{modificado}, donde se calculó la integral entre 0 y un $\Delta x > 0$ como $I_0 = f(\frac{\Delta x}{2})\Delta x$. 
 
 Desde $z=\Delta x$ hasta $z=1$ se usó Simpson vía método de los trapecios. 
-Se calculó $S_{2N}=\frac{1}{3}(4T_{2N}-T_N)$, donde $S_{2N}$ es la integral usando Simpson, mientras que $T_N$, $T_{2N}$ son las integrales usando trapecios. 
+Se calculó $S_{2N}=\frac{1}{3}(4T_{2N}-T_N)$, donde $S_{2N}$ es la integral usando Simpson, mientras que $T_N$, $T_{2N}$ son las integrales usando trapecios y $N$ es el número de puntos considerados. 
 
 
-Las integrales usando método de trapecios se calculan como $\displaystyle T_N=\left(\frac{f(a)+f(b)}{2}+\sum_{i=1}^{N-1} f(x_0+i\Delta x)\right)\Delta x$, con $\displaystyle \Delta x = \frac{b-a}{N}$.
-
-Se ha definido un parámetro llamado \textbf{tol\_rel} que permite determinar el cumplimiento de la siguiente desigualdad:
-
-\insertequation{\left|\frac{S_{2N}-T_N}{T_N}\right|> \textbf{tol\_rel}} 
-
-En caso contrario, no será necesario volver a llamar recursivamente la función considerando el doble de puntos.
-Se determinó el valor a usar de la tolerancia relativa gracias a la figura \ref{err}. Se usaron valores conocidos de $\Gamma(z)$ (si $n \in \N$, $\Gamma(n)=(n-1)!$) cercanos a $k/2$, para posteriormente calcular el error asociado a la tolerancia otorgada y luego promediarlo para distintos valores.
-
-\begin{images}[\label{integrando}]{Área bajo los integrandos.}
-	\addimage{area_bajo_gamma_1.png}{width=8cm}{Área bajo la curva $y=x^{k/2-1}e^{-x}$ entre $x=0$ y $x=\infty$, cuyo valor es equivalente a calcular $\Gamma(k/2)$, con $k=4.495$. \label{original}}
-	\addimage{area_bajo_gamma_2.png}{width=8cm}{Área bajo la curva $y=(-\ln(u))^{k/2-1}$ entre $x=0$ y $x=1$, cuyo valor es equivalente a calcular $\Gamma(k/2)$, con $k=4.495$. \label{modificado}}	
-\end{images}
-
-
-El error cuadrático medio se calculó como \insertequation{\langle e \rangle_{2N} = \frac{1}{4}\sum_{i=1}^4 |S_{2N}(i) - (i-1)!|} y se aprecia su valor para distintas tolerancias relativas en la figura \ref{err}.
+Las integrales usando método de trapecios se calculan como $\displaystyle T_N=\left(\frac{f(a)+f(b)}{2}+\sum_{i=1}^{N-1} f(x_0+i\Delta x)\right)\Delta x$, con $\displaystyle \Delta x = \frac{b-a}{N}$ (se ha usado el mismo valor de $\Delta x$ para el punto medio y para Simpson en el cálculo de $\Gamma(k/2)$).
 
 \newp
+Se ha definido un parámetro llamado \textbf{rel\_tol} que permite determinar el cumplimiento de la siguiente desigualdad:
+
+\insertequation{\left|\frac{S_{2N}-T_N}{T_N}\right|> \textbf{rel\_tol}} 
+
+En caso contrario, no será necesario volver a llamar recursivamente la función considerando el doble de puntos.
+
+\begin{images}[\label{integrando}]{Área bajo los integrandos para el cálculo de $\Gamma(k/2)$.}
+	\addimage{area_bajo_gamma_1.png}{width=8cm}{Área bajo la curva $y=x^{k/2-1}e^{-x}$ entre $x=0$ y $x=\infty$, cuyo valor es equivalente a calcular $\Gamma(k/2)$, con $k=4.495$. \label{original}}
+	\addimage{area_bajo_gamma_2.png}{width=8cm}{Área bajo la curva $y=(-\ln(x))^{k/2-1}$ entre $x=0$ y $x=1$, cuyo valor es equivalente a calcular $\Gamma(k/2)$, con $k=4.495$. En $x=0$ aparece una singularidad que impide la aplicación directa del método de Simpson. \label{modificado}}	
+\end{images}
+
 La función $\chi ^2 (x)$ tiene su dominio en $\R^+ \cup \{0\}$, por lo que para el cálculo de $\P(x<a)$ no se requirió un cambio de variables que solucionara el problema del extremo inferior $x=-\infty$ (se calcula desde $x=0$).
 
 
-Finalmente para encontrar el valor de $a$ se ha usado el método de la bisección. Se definió en el código la función \textbf{prob\_menos\_95} para que el problema final sea calcular el cero de la función $f(a) = \int_0^a \chi^2(x) dx - 0.95$. 
-
+Finalmente para encontrar el valor de $a$ se ha usado el método de Newton-Rhapson. Se definió en el código la función \textbf{prob\_menos\_95} para que el problema final sea calcular el cero de la función $f(a) = \int_0^a \chi^2(x) dx - 0.95$. 
+Para otorgarle un punto inicial cercano al cero a encontrar, se utilizó el método de bisección para $0.1<a<20$.
 El método de la bisección toma dos puntos $x_1$ y $x_2$ tales que $f(x_1)f(x_2)<0$. Se escoge $p=\frac{x_1 + x_2}{2}$ para luego determinar a qué lado del cero está $f(p)$. Este proceso se itera tantas veces como precisión se quiera. 
-\insertimage{area_bajo_chi2_para_a.png}{width=8cm}{Área bajo la curva $y = \chi^2(x)$ desde $x = 0$ hasta el valor encontrado $x=a$. \label{area}}
-Se usó también el método de Newton-Rhapson como comparación, consistente en iterar $x_{i+1}=x_i-\frac{f(x_i)}{f'(x_i)}$. La derivada de $f(x)$ es $f'(x) = \chi^2(x)$ por teorema fundamental del cálculo.
-\section{Resultados}
-\insertimage{tol_rel_3_Gamma.png}{width = 10cm}{Error absoluto promedio en función de la tolerancia relativa otorgada como parámetro al método de Simpson para la función $\Gamma(z)$. \label{err}}
 
-\insertimage{biseccion.png}{width=10cm}{Valor de $a$ encontrado con el método de Newton.}
+\insertimage{area_bajo_chi2_para_a.png}{height=7cm}{Área bajo la curva $y = \chi^2(x)$ desde $x = 0$ hasta el valor encontrado $x=a$. \label{area}}
+Se usó el método de Newton-Rhapson además como comparación, consistente en iterar $x_{i+1}=x_i-\frac{f(x_i)}{f'(x_i)}$. La derivada de $f(x)$ es $f'(x) = \chi^2(x)$ por teorema fundamental del cálculo.
+
+
+\section{Resultados}
+El cambio de variable $u=e^{-x}$ permitió obtener el valor de $\Gamma(k/2) = 1.1313837482276219$ usando una tolerancia relativa \textbf{rel\_tol} $= 1\times10^{-6}$. El método de Newton entrega el valor $a=10.280255476431453$ para una tolerancia absoluta \textbf{tol\_abs} $= 1\times 10^{-12}$ en Newton y una relativa de $1\times 10^{-8}$ en Simpson (se usan ambos para determinar el valor de $a$).
+\begin{table}[H]
+	\begin{tabular}{|l|c|l|}
+		\hline
+		\multicolumn{1}{|c|}{$\Delta x = $\textbf{rel\_tol}} & \multicolumn{1}{l|}{Valor de $\Gamma(k/2)$} & Tiempo con \%timeit                       \\ \hline
+		\multicolumn{1}{|c|}{$1\times10^{-5}$}           & \textbf{1.1313}772563462283                          & \multicolumn{1}{c|}{577 ms $\pm$ 16.1 ms} \\ \hline
+		\multicolumn{1}{|c|}{$1\times10^{-6}$}           & \textbf{1.13138}37482276219                          & \multicolumn{1}{c|}{4.46 s $\pm$ 137 ms}  \\ \hline
+		\multicolumn{1}{|c|}{$1\times10^{-7}$}           & \textbf{1.1313844}07180971                           & 1min 12s $\pm$ 1.98 s                     \\ \hline
+		\texttt{scipy.special.gamma(k/2)} & \textbf{1.131384485494286} & \multicolumn{1}{c|}{-}
+		\\
+		\hline
+	\end{tabular}
+\caption{Tiempo de ejecución y valor de $\Gamma(k/2)$ para tres valores de $dx$. Se aprecia un aumento significativo en el tiempo de ejecución a cambio de poca mejoría en la precisión. Se adjunta en la última fila el valor otorgado por la librería \texttt{scipy}, la cual se asume como infinitamente preciso para efectos de comparación.}
+\label{dxGamma}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[H]
+	\begin{tabular}{|l|l|c|l|}
+		\hline
+		Método                  & Tolerancia Absoluta & \multicolumn{1}{l|}{Número de pasos} & Valor de $a$                                 \\ \hline
+		Bisección               & $1\times10^{-5}$    & 22                                   & \textbf{10.28025}1502990723 \\ \hline
+		\multirow{2}{*}{Newton} & $1\times10^{-5}$    & 6                                    & \textbf{10.280255476431}392 \\ \cline{2-4} 
+		& $1\times 10^{-12}$  & 3                                    & \textbf{10.280255476431}453                           \\ \hline
+	\end{tabular}
+%valor real de a = 10.28028651823
+\caption{Comparación entre el método de la bisección y el de Newton para encontrar $a$. La tercera fila es en realidad la combinación del método de la bisección y el de Newton. Al último se le ha otorgado como valor inicial el resultado del primero.}
+\label{metodos}
+\end{table}
+
+
+\insertimage{biseccion.png}{height=8cm}{Valor de $a$ encontrado con el método de Newton. Se muestra además la función probabilidad computada con el método de Simpson.}
 
 \section{Discusión y Conclusiones}
-Visualmente, la resolución del problema consistía en encontrar el $a$ que hiciera el área azul bajo la curva $y = \chi^2(x)$ igual a 0.95, cuestión ilustrada en la figura \ref{area}.
+Visualmente, la resolución del problema consistía en encontrar el $a$ que hiciera el área azul bajo la curva $y = \chi^2(x)$ igual a 0.95, cuestión ilustrada en la figura \ref{area}. El valor de $a$ que se retorna depende fuertemente de los valores de las tolerancias entregadas. 
 
+La resolución del problema requería del uso de un cambio de variable que ocasionó un problema adicional (la singularidad). Una mejor elección de esto último pudo haber evitado su aparición. El costo de tener que calcular aparte la región cercana a la singularidad se aprecia en la tabla \ref{dxGamma}, donde por razones de tiempo no es posible calcular más allá del séptimo decimal. Esta es la razón de la elección de $\Delta x = 1 \times 10^{-6}$ para el cálculo de $\Gamma(k/2)$. Como contraste, el método \texttt{scipy.specials.gamma}, que es un análogo del $\Gamma(z)$ de la libería \texttt{scipy}, otorga un valor que sólo coincide en seis cifras significativas con el usado en este informe.
+
+Se eligió el método de Newton debido a su rapidez; aunque como no está asegurada su convergencia se usó como intermediario al método de la bisección, el cual le otorgó a su par un valor inicial cercano al cero buscado. Es interesante destacar la notoriedad de la convergencia cuadrática del método de Newton en la tabla \ref{metodos} asumiendo precisión exacta en la función $\Gamma(z)$ programada, pues con solo 6 pasos obtiene 7 nuevos decimales de precisión (contrastado con los 22 pasos y 5 decimales del método de bisección, se percibe la mejora). 
 % FIN DEL DOCUMENTO
 \end{document}
