--- a/Informe/tex/template_config.tex
+++ b/Informe/tex/template_config.tex
@@ -66,7 +66,7 @@
 \def\subcaptionfsize{footnotesize} % Tamaño de la fuente de los subcaption
 \def\subcaptionlabelformat{parens} % Formato leyenda sub. {empty,simple,parens}
 \def\subcaptionlabelsep {space}    % Sep. {none,colon,period,space,quad,newline}
-\def\tablecaptiontop {true}        % Leyenda arriba de las tablas
+\def\tablecaptiontop {false}        % Leyenda arriba de las tablas
 
 % CONFIGURACIÓN DEL ÍNDICE
 \def\addindextobookmarks {true}    % Añade el índice a los marcadores del pdf
